# gullfoss-os

./: Makefile  kernel.ld  test_kernel_serial.sh
include/: .dir-locals.el  vscode_preinclude.h
include/kernel/: assert.h  block_source.h  bootboot.h  clock.h  descriptor_tables.h  elf_loader.h  framebuffer.h  heap_allocator.h  ide_controller.h  interrupt_impl.h  interrupt_manager.h  ipc.h  kernel.h  linked_block_allocator.h  pci.h  phys_mem_allocator.h  proc_allocator.h  process.h  prog_int_timer.h  psffont.h  shell.h  splash.h  syscalls.h  tar.h  task_manager.h  terminal.h  test.h  util.h  virt_file_sys.h  virt_mem_allocator.h
include/system/: climits  cmath  cstdlib  cstring  forward_list  memory  types.h  vector
src/boot/: bootboot.template.json  texgyrecursor-regular.psf
src/kernel/: clock.cpp  crti.s  crtn.s  cxxabi.cpp  descriptor_tables.cpp  elf_loader.cpp  heap_allocator.cpp  ide_controller.cpp  interrupt_impl.cpp  interrupt_manager.cpp  ipc.cpp  kernel.cpp  keyboard_state.cpp  linked_block_allocator.cpp  memory.cpp  panic.cpp  pci.cpp  phys_mem_allocator.cpp  proc_allocator.cpp  process.cpp  psffont.cpp  shell.cpp  splash.cpp  syscalls.cpp  tar.cpp  task_manager.cpp  task_manager_entry.s  terminal.cpp  test.cpp  virt_file_sys.cpp  (+1 more)
static/: waterfall.xcf
user/: .gitignore  Makefile  README.md  terminal.hs
user-hs/: Makefile  README.md  cabal.project
user-rs/: .gitignore  Makefile  README.md  STYLE.md  rustup.sh  x86_64-unknown-none.json
user/app/: app.cabal  shell.hs  wallpaper.hs
user/lib/: lib.cabal
user/lib/Graphics/: Wayland.hs
(+47 files in other folders)
